# ccea-repo

./: .gitignore  README.md  rover-domain.cabal  rover-domain.cabal~  stack.yaml
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/flag-cache/: hnn-0.3-BTcaYwOzMFRHoXIMlsey6T  loop-0.3.0-98VH1UqsOHy2KxBxA55ICY  matrix-0.3.5.0-Ai5MbZhiOOC3qmPfUuhoAV  neural-algorithms-0.1.0.0-5aqhJNMEboR7D3hIbxnTW3  normaldistribution-1.1.0.3-5Tmsx8i18mO3UhoQolUXZE  rover-domain-0.1.0.0-2XN42RYhkLL9WmvIWdPyrL  rover-domain-0.1.0.0-3kQqTYfbagn9tMVMyew2ok  rover-domain-0.1.0.0-61Fsc9uUajFGfxZsLCyosq  rover-domain-0.1.0.0-6ERzeIYt3QhGfqJ6psr9Kr  rover-domain-0.1.0.0-9rgZUxJ9yE97mO29G2kdIE  rover-domain-0.1.0.0-G32AcM5MtzlJS0iNGAVaLr  rover-domain-0.1.0.0-Iiy4y1PG0h6JkiXtjB92I9  rover-domain-0.1.0.0-JsEMDIdMXPD7IvgZjfjPFR  rover-domain-0.1.0.0-LPWB337aRQv1KdeZ5ES95n
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/: libHShnn-0.3-BTcaYwOzMFRHoXIMlsey6T-ghc8.0.1.dylib  libHSneural-algorithms-0.1.0.0-5aqhJNMEboR7D3hIbxnTW3-ghc8.0.1.dylib  libHSrover-domain-0.1.0.0-2XN42RYhkLL9WmvIWdPyrL-ghc8.0.1.dylib  libHSrover-domain-0.1.0.0-3kQqTYfbagn9tMVMyew2ok-ghc8.0.1.dylib  libHSrover-domain-0.1.0.0-61Fsc9uUajFGfxZsLCyosq-ghc8.0.1.dylib  libHSrover-domain-0.1.0.0-6ERzeIYt3QhGfqJ6psr9Kr-ghc8.0.1.dylib  libHSrover-domain-0.1.0.0-9rgZUxJ9yE97mO29G2kdIE-ghc8.0.1.dylib  libHSrover-domain-0.1.0.0-G32AcM5MtzlJS0iNGAVaLr-ghc8.0.1.dylib  libHSrover-domain-0.1.0.0-Iiy4y1PG0h6JkiXtjB92I9-ghc8.0.1.dylib  libHSrover-domain-0.1.0.0-JsEMDIdMXPD7IvgZjfjPFR-ghc8.0.1.dylib  libHSrover-domain-0.1.0.0-LPWB337aRQv1KdeZ5ES95n-ghc8.0.1.dylib
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/neural-algorithms-0.1.0.0-5aqhJNMEboR7D3hIbxnTW3/: CCEA.dyn_hi  CCEA.hi  Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/neural-algorithms-0.1.0.0-5aqhJNMEboR7D3hIbxnTW3/CCEA/: CCEA.dyn_hi  CCEA.hi  EA.dyn_hi  EA.hi  XOR.dyn_hi  XOR.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/neural-algorithms-0.1.0.0-5aqhJNMEboR7D3hIbxnTW3/Matrix/: State.dyn_hi  State.hi  Traversable.dyn_hi  Traversable.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/neural-algorithms-0.1.0.0-5aqhJNMEboR7D3hIbxnTW3/NN/: NeuralNetwork.dyn_hi  NeuralNetwork.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/neural-algorithms-0.1.0.0-5aqhJNMEboR7D3hIbxnTW3/RandomUtil/: Random.dyn_hi  Random.hi  RandomMatrix.dyn_hi  RandomMatrix.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/neural-algorithms-0.1.0.0-5aqhJNMEboR7D3hIbxnTW3/Util/: MyList.dyn_hi  MyList.hi  Tuples.dyn_hi  Tuples.hi  Vars.dyn_hi  Vars.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-2XN42RYhkLL9WmvIWdPyrL/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-2XN42RYhkLL9WmvIWdPyrL/Models/: Location.dyn_hi  Location.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-3kQqTYfbagn9tMVMyew2ok/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-3kQqTYfbagn9tMVMyew2ok/Models/: Agent.dyn_hi  Agent.hi  Location.dyn_hi  Location.hi  Orientation.dyn_hi  Orientation.hi  RoverDomain.dyn_hi  RoverDomain.hi  State.dyn_hi  State.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-3kQqTYfbagn9tMVMyew2ok/Sim/: Simulation.dyn_hi  Simulation.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-61Fsc9uUajFGfxZsLCyosq/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-61Fsc9uUajFGfxZsLCyosq/CCEA/: CCEA.dyn_hi  CCEA.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-61Fsc9uUajFGfxZsLCyosq/Matrix/: State.dyn_hi  State.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-6ERzeIYt3QhGfqJ6psr9Kr/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-9rgZUxJ9yE97mO29G2kdIE/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-G32AcM5MtzlJS0iNGAVaLr/: Rover.dyn_hi  Rover.hi  Util.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-Iiy4y1PG0h6JkiXtjB92I9/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-JsEMDIdMXPD7IvgZjfjPFR/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/rover-domain-0.1.0.0-LPWB337aRQv1KdeZ5ES95n/: Rover.dyn_hi  Rover.hi
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/pkgdb/: hnn-0.3-BTcaYwOzMFRHoXIMlsey6T.conf  neural-algorithms-0.1.0.0-5aqhJNMEboR7D3hIbxnTW3.conf  normaldistribution-1.1.0.3-5Tmsx8i18mO3UhoQolUXZE.conf  package.cache  rover-domain-0.1.0.0-G32AcM5MtzlJS0iNGAVaLr.conf
app/: Main.hs  Main.hs~
experiments/: Main.hs
src/: Lib.hs  Lib.hs~  Rover.hs  Rover.hs~  Util.hs  Util.hs~
src/CCEA/: #CCEA.hs#  .#CCEA.hs  CCEA.hs  CCEA.hs~
src/Matrix/: State.hs  State.hs~
src/Models/: Actor.hs  Actor.hs~  Agent.hs  Agent.hs~  Domain.hs  Domain.hs~  Location.hs  Location.hs~  Orientation.hs  Orientation.hs~  POI.hs  POI.hs~  Rover.hs  Rover.hs~  RoverDomain.hs  RoverDomain.hs~  RoverDomainAdv.hs  RoverDomainAdv.hs~  State.hs  State.hs~
src/NN/: NeuralNetwork.hs  NeuralNetwork.hs~
src/RandomUtil/: Random.hs  Random.hs~  RandomMatrix.hs  RandomMatrix.hs~
src/Sim/: Simulation.hs  Simulation.hs~
src/Util/: Vars.hs  Vars.hs~
test/: Spec.hs  Spec.hs~
test/Models/: LocationTest.hs  LocationTest.hs~  OrientationTest.hs  OrientationTest.hs~  POITest.hs  POITest.hs~  StateTest.hs  StateTest.hs~
test/NN/: NeuralNetworkTest.hs
test/RandomUtil/: RandomMatrixTest.hs  RandomMatrixTest.hs~
(+71 files in other folders)
