name:                rover-domain
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/eklinkhammer/rover-domain#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Eric Klinkhammer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , CCEA.CCEA
                     , NN.NeuralNetwork
                     , RandomUtil.RandomMatrix
                     , RandomUtil.Random
                     , Matrix.State
                     , Util.Vars
  build-depends:       base >= 4.7 && < 5
                     , hnn
                     , hmatrix
                     , vector
                     , mtl
                     , random
                     , containers
                     , random-shuffle
  default-language:    Haskell2010

executable rover-domain-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , rover-domain
                     , random-shuffle
  default-language:    Haskell2010

test-suite rover-domain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base
                     , rover-domain
                     , hmatrix
                     , mtl
                     , HUnit
                     , vector
                     , mtl
                     , random
                     , containers
                     , hnn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  other-modules:       Matrix.State
                       Matrix.StateTest
                       RandomUtil.RandomMatrix
                       RandomUtil.RandomMatrixTest
                       RandomUtil.Random
                       NN.NeuralNetwork
                       NN.NeuralNetworkTest
                       Util.Vars
                       

source-repository head
  type:     git
  location: https://github.com/githubuser/rover-domain
