name:                rover-domain
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/eklinkhammer/rover-domain#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Klinkhammer
maintainer:          eklinkhammer@gmail.com
copyright:           2017 Eric Klinkhammer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Models.Location
                     , Sim.Simulation
                     , Models.State
                     , Models.RoverDomain
                     , Models.Orientation
                     , Models.Agent
  build-depends:       base >= 4.7 && < 5   
                     , neural-algorithms
                     , random
                     , hmatrix
  default-language:    Haskell2010

test-suite rover-domain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       Models.LocationTest
                     , Models.Location
  build-depends:       base
                     , rover-domain
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eklinkhammer/rover-domain
