name:                rover-domain
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/eklinkhammer/rover-domain#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Klinkhammer
maintainer:          eklinkhammer@gmail.com
copyright:           2017 Eric Klinkhammer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rover
                     , Util
                     , Models.Location
                     , Sim.Simulation
                     , Models.State
                     , Models.RoverDomain
                     , Models.Orientation
                     , Models.Rover
                     , Models.POI
  build-depends:       base >= 4.7 && < 5   
                     , neural-algorithms
                     , random
                     , hmatrix
                     , matrix
                     , containers
                     , mtl
  default-language:    Haskell2010

executable rover-domain-experiment
  hs-source-dirs:      experiments
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rover-domain
  default-language:    Haskell2010
  
test-suite rover-domain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       Models.Location
                     , Models.LocationTest
                     , Models.Orientation
                     , Models.OrientationTest
                     , Models.State
                     , Models.StateTest
                     , Models.POI
                     , Models.POITest
                     , Models.RoverDomain
  build-depends:       base
                     , rover-domain
                     , HUnit
                     , random
                     , neural-algorithms
                     , matrix
                     , hmatrix
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eklinkhammer/rover-domain
